# IoT_Window

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  lwipopts.h  shell.nix  upload_uf2.sh
code/: CMakeLists.txt  Makefile  lwipopts.h
code/src/: action_queue.hh  advanced_opts.h  advanced_opts.hh  common.h  common.hh  ha_device.cc  ha_device.hh  ha_device_info.hh  limit_switch.hh  main.cc  mqtt_topics.hh  network.c  network.cc  network.h  network.hh  opts.h  opts.hh  pins.c  pins.cc  pins.h  pins.hh  stepper_motor.cc  stepper_motor.hh
code/src/stepper_motor/: CMakeLists.txt  action_queue.cc  action_queue.hh  stepper_motor.cc  stepper_motor.hh
docs/breadboard_diagram/src/: main.typ
parts/: README.md
parts/cad/: Mount_Mk2-Motor_Mount.3mf  Mount_Mk2-Single_Block.3mf  Mount_Mk2-Window_Grab_Arm.3mf  Mount_Mk2-Window_Grab_Arm_Clamp.3mf  Mount_Mk2-Window_Grab_Clamp.3mf  Mount_Mk2.FCStd
src/: advanced_opts.h  common.h  ha_device.c  ha_device.cc  ha_device.h  ha_device.hh  limit_switch.c  limit_switch.h  main.c  main.cc  network.c  opts.h  pins.c  pins.h  stepper_motor.c  stepper_motor.cc  stepper_motor.h  stepper_motor.hh
